update google forms link

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -41,7 +41,7 @@ This is exactly same procedure you would do as a QA Engineer, with only few slig
 
 I hope you got it right, you are the next one who companies will be hunting for, if you are ready for it :)
 
-<a href="https://forms.gle/RRcWipp4vhiEkX9K8" target="_blank">
+<a href="https://forms.gle/wHmmsTncW8ysqLBK8" target="_blank">
    <button class="registerbtn" >Register Now</button>
 </a>
 
